--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
-<p style="text-align:justify;font-size:90%;">Graduated with a Ph.D. in Mathematics from the University of Massachusetts Amherst. My primary advisor was Professor Richard S. Ellis and my research with him focused on the asymptotic behavior of stochastic dynamical systems and properties of their invariant measures. Furthermore, I've collaborated with Professors Erin Conlon, my co-advisor, and Alexey Miroshnikov on establishing asymptotic properties of Bayesian statistical methods for data science. My thesis can be found on Scholarworks@UMass Amherst <a href="https://scholarworks.umass.edu/dissertations_2/1316/">here</a>.</p>
-<p style="text-align:justify;font-size:90%;">Currently, I'm a Lead Research Scientist at Discover Financial Services. My work there focuses on problems related to Machine Learning interpretability.</p>
-
-<h4>Education</h4>
-<ul>
- 	<li style="text-align:left;font-size:90%;">Ph.D. in Mathematics, University of Massachusetts Amherst, 2018</li>
- 	<li style="text-align:left;font-size:90%;">M.Sc. in Mathematics, University of Massachusetts Amherst, 2015</li>
- 	<li style="font-size:90%;">B.Sc. in Mathematics, University of Crete, Greece, 2012</li>
-</ul>
-<h4>Research Interests</h4>
-<ul>
- 	<li style="font-size:90%;">Probability theory: limit theorems for Markov chains, large deviation theory, stochastic
-processes and stochastic ODEs</li>
- 	<li style="font-size:90%;">Dynamical systems and ergodic theory</li>
- 	<li style="font-size:90%;">Statistics with applications to data science</li>
- 	<li style="font-size:90%;">Machine Learning interpretability</li>
-</ul>
+<!DOCTYPE html>
+<html>
+<body>
+    <img src="mypic.jpg" alt="My_Picture.com" width="104" height="142">
+    <p style="text-align:justify;">Graduated with a Ph.D. in Mathematics from the University of Massachusetts Amherst. My primary advisor was Professor Richard S. Ellis and my research with him focused on the asymptotic behavior of stochastic dynamical systems and properties of their invariant measures. Furthermore, I've collaborated with Professors Erin Conlon, my co-advisor, and Alexey Miroshnikov on establishing asymptotic properties of Bayesian statistical methods for data science. My thesis can be found on Scholarworks@UMass Amherst <a href="https://scholarworks.umass.edu/dissertations_2/1316/">here</a>.</p>
+    <p style="text-align:justify;">Currently, I'm a Lead Research Scientist at Discover Financial Services. My work there focuses on problems related to Machine Learning interpretability.</p>
+    
+    <h4>Education</h4>
+    <ul>
+         <li style="text-align:left;">Ph.D. in Mathematics, University of Massachusetts Amherst, 2018</li>
+         <li style="text-align:left;">M.Sc. in Mathematics, University of Massachusetts Amherst, 2015</li>
+         <li style="text-align:left;">B.Sc. in Mathematics, University of Crete, Greece, 2012</li>
+    </ul>
+    <h4>Research Interests</h4>
+    <ul>
+         <li style="text-align:left;">Probability theory: limit theorems for Markov chains, large deviation theory, stochastic
+    processes and stochastic ODEs</li>
+         <li style="text-align:left;">Dynamical systems and ergodic theory</li>
+         <li style="text-align:left;">Statistics with applications to data science</li>
+         <li style="text-align:left;">Machine Learning interpretability</li>
+    </ul>
+</body>
+</html>
