--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Welcome to Kostas' page</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <title>Kostas' page</title>
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="center">
