--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             text-align: center;
         }
         .headpic {
-          background-color: mediumseagreen;
+          background-color: rgba(61, 148, 174, 0.329);
           color: white;
           border: 2px solid black;
           margin: 20px;
@@ -16,7 +16,7 @@
         }
         .ImageBorder
         {
-            border-width: 1px;
+            border-width: 5px;
             border-color: Black;
         }
     </style>
