--- a/cv.html
+++ b/cv.html
@@ -26,8 +26,8 @@
     <div class="headpic">
         <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder"/>
         <a href="index.html">Home</a>
-        <a href="experience.html">Research</a>
-        <a href="index.html">CV</a>
+        <a href="research.html">Research</a>
+        <a href="cv.html">CV</a>
     </div>
     <h6>Education</h6>
     <ul>
