--- a/research.html
+++ b/research.html
@@ -31,18 +31,18 @@
     </div>
     <h6>Research Interests</h6>
     <ul>
-        <li style="text-align:center;">Probability theory: limit theorems for Markov chains, large deviation theory, stochastic
+        <li style="text-align:justify;">Probability theory: limit theorems for Markov chains, large deviation theory, stochastic
     processes and stochastic ODEs</li>
-        <li style="text-align:center;">Dynamical systems and ergodic theory</li>
-        <li style="text-align:center;">Statistics with applications to data science</li>
-        <li style="text-align:center;">Machine Learning interpretability</li>
+        <li style="text-align:justify;">Dynamical systems and ergodic theory</li>
+        <li style="text-align:justify;">Statistics with applications to data science</li>
+        <li style="text-align:justify;">Machine Learning interpretability</li>
     </ul>
     <h6>Publications</h6>
     <ol>
-        <li style="text-align:center;">A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan,<em><span class="fontstyle0"> "Model-agnostic bias mitigation methods with regressor distribution control for Wasserstein-based fairness metrics", </span></em>(2021), <a href="https://arxiv.org/abs/2111.11259" target="_blank" rel="noopener">arxiv:2111.11259.</a></li>
-        <li style="text-align:center;">A. Miroshnikov, K. Kotsiopoulos, and A. Ravi Kannan,<em><span class="fontstyle0"> "Mutual information-based group explainers with coalition structure for machine learning model explanations", </span></em>(2021), <a href="https://arxiv.org/abs/2102.10878" target="_blank" rel="noopener">arxiv:2102.10878.</a></li>
-        <li style="text-align:center;">A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan,<em><span class="fontstyle0"> "Wasserstein-based fairness interpretability framework for machine learning models", </span></em>(2020), <a href="https://arxiv.org/abs/2011.03156" target="_blank" rel="noopener">arxiv:2011.03156.</a></li>
-        <li style="text-align:center;">A. Miroshnikov, K. Kotsiopoulos and E. Conlon,<em><span class="fontstyle0"> "Asymptotic properties and approximation of Bayesian logspline density estimators for communication-free </span></em><em><span class="fontstyle0"> parallel computing methods</span>", </em>Submitted (2018), <a href="https://arxiv.org/abs/1710.09071" target="_blank" rel="noopener">arxiv:1710.09071.</a></li>
+        <li style="text-align:justify;">A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan,<em><span class="fontstyle0"> "Model-agnostic bias mitigation methods with regressor distribution control for Wasserstein-based fairness metrics", </span></em>(2021), <a href="https://arxiv.org/abs/2111.11259" target="_blank" rel="noopener">arxiv:2111.11259.</a></li>
+        <li style="text-align:justify;">A. Miroshnikov, K. Kotsiopoulos, and A. Ravi Kannan,<em><span class="fontstyle0"> "Mutual information-based group explainers with coalition structure for machine learning model explanations", </span></em>(2021), <a href="https://arxiv.org/abs/2102.10878" target="_blank" rel="noopener">arxiv:2102.10878.</a></li>
+        <li style="text-align:justify;">A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan,<em><span class="fontstyle0"> "Wasserstein-based fairness interpretability framework for machine learning models", </span></em>(2020), <a href="https://arxiv.org/abs/2011.03156" target="_blank" rel="noopener">arxiv:2011.03156.</a></li>
+        <li style="text-align:justify;">A. Miroshnikov, K. Kotsiopoulos and E. Conlon,<em><span class="fontstyle0"> "Asymptotic properties and approximation of Bayesian logspline density estimators for communication-free </span></em><em><span class="fontstyle0"> parallel computing methods</span>", </em>Submitted (2018), <a href="https://arxiv.org/abs/1710.09071" target="_blank" rel="noopener">arxiv:1710.09071.</a></li>
     </ol>
 </body>
 </html>
