--- a/cv.html
+++ b/cv.html
@@ -31,87 +31,87 @@
     </div>
     <h6>Education</h6>
     <ul>
-        <li style="text-align:center;">Ph.D. in Mathematics, University of Massachusetts Amherst, 2013 - 2018</li>
-        <li style="text-align:center;">M.Sc. in Mathematics, University of Massachusetts Amherst, 2013 - 2015</li>
-        <li style="text-align:center;">Non-degree graduate studies at the University of Crete, Greece, 2012 - 2013</li>
-        <li style="text-align:center;">B.Sc. in Mathematics, University of Crete, Greece, 2008 - 2012</li>
+        <li style="text-align:justify;">Ph.D. in Mathematics, University of Massachusetts Amherst, 2013 - 2018</li>
+        <li style="text-align:justify;">M.Sc. in Mathematics, University of Massachusetts Amherst, 2013 - 2015</li>
+        <li style="text-align:justify;">Non-degree graduate studies at the University of Crete, Greece, 2012 - 2013</li>
+        <li style="text-align:justify;">B.Sc. in Mathematics, University of Crete, Greece, 2008 - 2012</li>
     </ul>
 
     <hr>
 
     <h6>Work/Research experience</h6>
     <ul>
-        <li style="text-align:center;">Lead Research Scientist, Discover Financial Services, October 2021 - Present</li>
-        <li style="text-align:center;">Senior Modeler, Discover Financial Services, March 2021 - October 2021</li>
-        <li style="text-align:center;">Modeler, Discover Financial Services, Aug 2019 - March 2021</li>
-        <li style="text-align:center;">Associate Modeler, Discover Financial Services, Nov 2018 - Aug 2019</li>
-        <li style="text-align:center;">Research Assistant, University of Massachusetts Amherst, Summer 2016</li>
-        <li style="text-align:center;">Student Intern, Foundation for Research and Technology – Institute of Applied and Computational Mathematics (FORTH - IACM), Summer 2012</li>
+        <li style="text-align:justify;">Lead Research Scientist, Discover Financial Services, October 2021 - Present</li>
+        <li style="text-align:justify;">Senior Modeler, Discover Financial Services, March 2021 - October 2021</li>
+        <li style="text-align:justify;">Modeler, Discover Financial Services, Aug 2019 - March 2021</li>
+        <li style="text-align:justify;">Associate Modeler, Discover Financial Services, Nov 2018 - Aug 2019</li>
+        <li style="text-align:justify;">Research Assistant, University of Massachusetts Amherst, Summer 2016</li>
+        <li style="text-align:justify;">Student Intern, Foundation for Research and Technology – Institute of Applied and Computational Mathematics (FORTH - IACM), Summer 2012</li>
     </ul>
 
     <hr>
 
     <h6>Teaching Experience</h6>
-    <strong style="text-align:center;">Department of Mathematics and Statistics, Mount Holyoke College, 2017</strong>
-    <p style="padding-left:30px;text-align:center;">−MATH 102: Calculus II</p>
-    <strong style="text-align:center;">Department of Mathematics and Statistics, University of Massachusetts Amherst, 2013 - Present</strong>
-    <p style="padding-left:30px;text-align:center;">−MATH 131: Calculus I</p>
-    <p style="padding-left:30px;text-align:center;">−MATH 132: Calculus II (discussion leader)</p>
-    <p style="padding-left:30px;text-align:center;">−MATH 132H: Honors Calculus II (discussion leader)</p>
-    <p style="padding-left:30px;text-align:center;">−MATH 233: Multivariate Calculus</p>
-    <p style="padding-left:30px;text-align:center;">−MATH 331: Ordinary Differential Equations for Scientists and Engineers</p>
-    <p style="padding-left:30px;text-align:center;">−MATH 456: Mathematical Modeling (discussion leader)</p>
-    <p style="padding-left:30px;text-align:center;">−STAT 240: Intro to Statistics (discussion leader &amp; online TA)</p>
-    <p style="padding-left:30px;text-align:center;">−STAT 501: Methods of Applied Statistics (TA)</p>
-    <strong style="text-align:center;">Department of Mathematics, University of Crete, Greece, 2011 - 2012</strong>
-    <p style="padding-left:30px;text-align:center;">−MEM-262: Parametric Statistics (discussion leader)</p>
+    <strong style="text-align:justify;">Department of Mathematics and Statistics, Mount Holyoke College, 2017</strong>
+    <p style="padding-left:30px;text-align:justify;">−MATH 102: Calculus II</p>
+    <strong style="text-align:justify;">Department of Mathematics and Statistics, University of Massachusetts Amherst, 2013 - Present</strong>
+    <p style="padding-left:30px;text-align:justify;">−MATH 131: Calculus I</p>
+    <p style="padding-left:30px;text-align:justify;">−MATH 132: Calculus II (discussion leader)</p>
+    <p style="padding-left:30px;text-align:justify;">−MATH 132H: Honors Calculus II (discussion leader)</p>
+    <p style="padding-left:30px;text-align:justify;">−MATH 233: Multivariate Calculus</p>
+    <p style="padding-left:30px;text-align:justify;">−MATH 331: Ordinary Differential Equations for Scientists and Engineers</p>
+    <p style="padding-left:30px;text-align:justify;">−MATH 456: Mathematical Modeling (discussion leader)</p>
+    <p style="padding-left:30px;text-align:justify;">−STAT 240: Intro to Statistics (discussion leader &amp; online TA)</p>
+    <p style="padding-left:30px;text-align:justify;">−STAT 501: Methods of Applied Statistics (TA)</p>
+    <strong style="text-align:justify;">Department of Mathematics, University of Crete, Greece, 2011 - 2012</strong>
+    <p style="padding-left:30px;text-align:justify;">−MEM-262: Parametric Statistics (discussion leader)</p>
 
 
     <hr>
 
     <h6>Contributed Talks</h6>
     <ul>
-        <li style="text-align:center;">WINRS: A Meeting of Mathematical Minds, Brown University, “<em>Asymptotic behavior of the random logistic model</em>”, March 2017</li>
-        <li style="text-align:center;">Applied Analysis and Computation Seminar, University of Massachusetts Amherst, “<em>Asymptotic behavior of the random logistic model</em>”, November 2016</li>
-        <li style="text-align:center;">Applied Math Days, Rensselaer Polytechnic Institute, “<em>Asymptotic behavior of the invariant density of the random logistic model</em>”, April 2016</li>
+        <li style="text-align:justify;">WINRS: A Meeting of Mathematical Minds, Brown University, “<em>Asymptotic behavior of the random logistic model</em>”, March 2017</li>
+        <li style="text-align:justify;">Applied Analysis and Computation Seminar, University of Massachusetts Amherst, “<em>Asymptotic behavior of the random logistic model</em>”, November 2016</li>
+        <li style="text-align:justify;">Applied Math Days, Rensselaer Polytechnic Institute, “<em>Asymptotic behavior of the invariant density of the random logistic model</em>”, April 2016</li>
     </ul>
 
     <hr>
 
     <h6>Additional conferences attended</h6>
     <ul>
-        <li style="text-align:center;">H2O World New York, October 2019</li>
-        <li style="text-align:center;">Biostatistics in Practice: Data Sciences for the Life Sciences in a High Performance Computing Environment, one-day workshop at MGHPCC, February 2014</li>
+        <li style="text-align:justify;">H2O World New York, October 2019</li>
+        <li style="text-align:justify;">Biostatistics in Practice: Data Sciences for the Life Sciences in a High Performance Computing Environment, one-day workshop at MGHPCC, February 2014</li>
     </ul>
 
     <hr>
 
     <h6>Awards and Honors</h6>
     <ul>
-        <li style="text-align:center;">President's award, Discover Financial Services, March 2022</li>
-        <li style="text-align:center;">Excellence award, Discover Financial Services, November 2020</li>
-        <li style="text-align:center;">"STYLIANOS K. PICHORIDES" award, University of Crete, Greece, June 2012</li>
-        <li style="text-align:center;">Scholarship awarded from the State Scholarship Foundation (IKY), 2009 - 2010</li>
+        <li style="text-align:justify;">President's award, Discover Financial Services, March 2022</li>
+        <li style="text-align:justify;">Excellence award, Discover Financial Services, November 2020</li>
+        <li style="text-align:justify;">"STYLIANOS K. PICHORIDES" award, University of Crete, Greece, June 2012</li>
+        <li style="text-align:justify;">Scholarship awarded from the State Scholarship Foundation (IKY), 2009 - 2010</li>
     </ul>
 
     <hr>
 
     <h6>Affiliations</h6>
-    <p style="text-align:center;">American Mathematical Society (AMS)</p>
+    <p style="text-align:justify;">American Mathematical Society (AMS)</p>
 
 
     <hr>
 
     <h6>Technical Proficiencies</h6>
-    <p style="text-align:center;">C, C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</p>
+    <p style="text-align:justify;">C, C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</p>
 
 
     <hr>
 
     <h6>Other Information</h6>
     <ul>
-        <li style="text-align:center;">Dual citizenship (U.S. and Greek)</li>
-        <li style="text-align:center;">Fluent in English and Greek</li>
+        <li style="text-align:justify;">Dual citizenship (U.S. and Greek)</li>
+        <li style="text-align:justify;">Fluent in English and Greek</li>
     </ul>
 </body>
 </html>
