--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <a href="research.html">Research</a>
         <a href="cv.html">CV</a>
     </div>
+    <h4 style="font: verdana;font-size: 120%;">About me</h4>
     <p style="text-align:justify;">Graduated with a Ph.D. in Mathematics from the University of Massachusetts Amherst. My primary advisor was Professor Richard S. Ellis and my research with him focused on the asymptotic behavior of stochastic dynamical systems and properties of their invariant measures. Furthermore, I've collaborated with Professors Erin Conlon, my co-advisor, and Alexey Miroshnikov on establishing asymptotic properties of Bayesian statistical methods for data science. My thesis can be found on Scholarworks@UMass Amherst <a href="https://scholarworks.umass.edu/dissertations_2/1316/">here</a>.</p>
     <p style="text-align:justify;">Currently, I'm a Lead Research Scientist at Discover Financial Services. My work there focuses on problems related to Machine Learning interpretability.</p>
     
