--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="headpic">
-        <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder"/>
+        <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder" <br>/>
         <a href="index.html">Home</a>
         <a href="research.html">Research</a>
         <a href="cv.html">CV</a>
