--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 </head>
 <body>
     <div class="headpic">
-        <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder" <br>/>
-        <a href="index.html">Home</a>
-        <a href="research.html">Research</a>
-        <a href="cv.html">CV</a>
+        <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder"/>
+        <p>
+            <a href="index.html">Home</a>
+            <a href="research.html">Research</a>
+            <a href="cv.html">CV</a>
+        </p>
     </div>
     <h4 style="font-size: 120%;">About me</h4>
     <p style="text-align:justify;">Graduated with a Ph.D. in Mathematics from the University of Massachusetts Amherst. My primary advisor was Professor Richard S. Ellis and my research with him focused on the asymptotic behavior of stochastic dynamical systems and properties of their invariant measures. Furthermore, I've collaborated with Professors Erin Conlon, my co-advisor, and Alexey Miroshnikov on establishing asymptotic properties of Bayesian statistical methods for data science. My thesis can be found on Scholarworks@UMass Amherst <a href="https://scholarworks.umass.edu/dissertations_2/1316/">here</a>.</p>
