--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <div class="headpic">
         <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder"/>
         <p>
-            <a href="index.html">Home</a>
-            <a href="research.html">Research</a>
-            <a href="cv.html">CV</a>
+            <a href="index.html" style="font-size: 120%">Home</a>
+            <a href="research.html" style="font-size: 120%">Research</a>
+            <a href="cv.html" style="font-size: 120%">CV</a>
         </p>
     </div>
     <h4 style="font-size: 120%;">About me</h4>
