--- a/research.html
+++ b/research.html
@@ -25,9 +25,11 @@
 <body>
     <div class="headpic">
         <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder"/>
-        <a href="index.html">Home</a>
-        <a href="research.html">Research</a>
-        <a href="cv.html">CV</a>
+        <p>
+            <a href="index.html" style="font-size: 120%">Home</a>
+            <a href="research.html" style="font-size: 120%">Research</a>
+            <a href="cv.html" style="font-size: 120%">CV</a>
+        </p>
     </div>
     <h6>Research Interests</h6>
     <ul>
