--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             border-color: Black;
             border-style: solid;
         }
+        a:active {
+            color: yellow;
+            background-color: transparent;
+            text-decoration: solid;
+            text-size-adjust: 125%;
+        }
     </style>
 </head>
 <body>
