--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         a:active {
             color: yellow;
             background-color: transparent;
-            text-decoration: solid;
-            text-size-adjust: 125%;
+            font-size: 120;
+            text-decoration: underline;
         }
     </style>
 </head>
