fixed all font sizes

--- a/cv.html
+++ b/cv.html
@@ -20,6 +20,12 @@
             border-color: Black;
             border-style: solid;
         }
+        a:active {
+            color: yellow;
+            background-color: transparent;
+            font-size: 135%;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -31,7 +37,7 @@
             <a href="cv.html" style="font-size: 120%">CV</a>
         </p>
     </div>
-    <h6>Education</h6>
+    <h3>Education</h3>
     <ul>
         <li style="text-align:justify;">Ph.D. in Mathematics, University of Massachusetts Amherst, 2013 - 2018</li>
         <li style="text-align:justify;">M.Sc. in Mathematics, University of Massachusetts Amherst, 2013 - 2015</li>
@@ -41,7 +47,7 @@
 
     <hr>
 
-    <h6>Work/Research experience</h6>
+    <h3>Work/Research experience</h3>
     <ul>
         <li style="text-align:justify;">Lead Research Scientist, Discover Financial Services, October 2021 - Present</li>
         <li style="text-align:justify;">Senior Modeler, Discover Financial Services, March 2021 - October 2021</li>
@@ -53,7 +59,7 @@
 
     <hr>
 
-    <h6>Teaching Experience</h6>
+    <h3>Teaching Experience</h3>
     <strong style="text-align:justify;">Department of Mathematics and Statistics, Mount Holyoke College, 2017</strong>
     <p style="padding-left:30px;text-align:justify;">−MATH 102: Calculus II</p>
     <strong style="text-align:justify;">Department of Mathematics and Statistics, University of Massachusetts Amherst, 2013 - Present</strong>
@@ -68,10 +74,9 @@
     <strong style="text-align:justify;">Department of Mathematics, University of Crete, Greece, 2011 - 2012</strong>
     <p style="padding-left:30px;text-align:justify;">−MEM-262: Parametric Statistics (discussion leader)</p>
 
-
     <hr>
 
-    <h6>Contributed Talks</h6>
+    <h3>Contributed Talks</h3>
     <ul>
         <li style="text-align:justify;">WINRS: A Meeting of Mathematical Minds, Brown University, “<em>Asymptotic behavior of the random logistic model</em>”, March 2017</li>
         <li style="text-align:justify;">Applied Analysis and Computation Seminar, University of Massachusetts Amherst, “<em>Asymptotic behavior of the random logistic model</em>”, November 2016</li>
@@ -80,7 +85,7 @@
 
     <hr>
 
-    <h6>Additional conferences attended</h6>
+    <h3>Additional conferences attended</h3>
     <ul>
         <li style="text-align:justify;">H2O World New York, October 2019</li>
         <li style="text-align:justify;">Biostatistics in Practice: Data Sciences for the Life Sciences in a High Performance Computing Environment, one-day workshop at MGHPCC, February 2014</li>
@@ -88,7 +93,7 @@
 
     <hr>
 
-    <h6>Awards and Honors</h6>
+    <h3>Awards and Honors</h3>
     <ul>
         <li style="text-align:justify;">President's award, Discover Financial Services, March 2022</li>
         <li style="text-align:justify;">Excellence award, Discover Financial Services, November 2020</li>
@@ -98,19 +103,19 @@
 
     <hr>
 
-    <h6>Affiliations</h6>
+    <h3>Affiliations</h3>
     <p style="text-align:justify;">American Mathematical Society (AMS)</p>
 
 
     <hr>
 
-    <h6>Technical Proficiencies</h6>
+    <h3>Technical Proficiencies</h3>
     <p style="text-align:justify;">C, C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</p>
 
 
     <hr>
 
-    <h6>Other Information</h6>
+    <h3>Other Information</h3>
     <ul>
         <li style="text-align:justify;">Dual citizenship (U.S. and Greek)</li>
         <li style="text-align:justify;">Fluent in English and Greek</li>
