--- a/research.html
+++ b/research.html
@@ -20,6 +20,12 @@
             border-color: Black;
             border-style: solid;
         }
+        a:active {
+            color: yellow;
+            background-color: transparent;
+            font-size: 135%;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
