--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             border-color: Black;
             border-style: solid;
         }
+        a:visited {
+            color: pink;
+            background-color: transparent;
+            text-decoration: none;
+        }
         a:active {
             color: yellow;
             background-color: transparent;
