--- a/cv.html
+++ b/cv.html
@@ -32,9 +32,9 @@
     <div class="headpic">
         <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder"/>
         <p>
-            <a href="index.html" style="font-size: 120%">Home</a>
-            <a href="research.html" style="font-size: 120%">Research</a>
-            <a href="cv.html" style="font-size: 120%">CV</a>
+            <a href="index.html" style="font-size: 120%; color:plum;">Home</a>
+            <a href="research.html" style="font-size: 120%; color: plum;">Research</a>
+            <a href="cv.html" style="font-size: 135%; color: darkorange;">CV</a>
         </p>
     </div>
     <h3>Education</h3>
