--- a/index.html
+++ b/index.html
@@ -20,26 +20,15 @@
             border-color: Black;
             border-style: solid;
         }
-        a:visited {
-            color: pink;
-            background-color: transparent;
-            text-decoration: none;
-        }
-        a:active {
-            color: yellow;
-            background-color: transparent;
-            font-size: 135%;
-            text-decoration: underline;
-        }
     </style>
 </head>
 <body>
     <div class="headpic">
         <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder"/>
         <p>
-            <a href="index.html" style="font-size: 120%">Home</a>
-            <a href="research.html" style="font-size: 120%">Research</a>
-            <a href="cv.html" style="font-size: 120%">CV</a>
+            <a href="index.html" style="font-size: 135%; color:darkorange;">Home</a>
+            <a href="research.html" style="font-size: 120%; color: plum;">Research</a>
+            <a href="cv.html" style="font-size: 120%; color: plum;">CV</a>
         </p>
     </div>
     <h3>About me</h3>
