--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <div class="headpic">
         <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder"/>
         <p>
+            Konstandinos Kotsiopoulos
+        </p>
+        <p>
             <a href="index.html" style="font-size: 135%; color:darkorange;">Home</a>
             <a href="research.html" style="font-size: 120%; color: plum;">Research</a>
             <a href="cv.html" style="font-size: 120%; color: plum;">CV</a>
