--- a/research.html
+++ b/research.html
@@ -31,8 +31,11 @@
 <body>
     <div class="headpic">
         <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder"/>
+        <p style="font-size: 150%;">
+            <b>Konstandinos Kotsiopoulos</b>
+        </p>
         <p>
-            <a href="index.html" style="font-size: 120%; color:plum;">Home</a>
+            <a href="home.html" style="font-size: 120%; color:plum;">Home</a>
             <a href="research.html" style="font-size: 135%; color: darkorange;">Research</a>
             <a href="cv.html" style="font-size: 120%; color: plum;">CV</a>
         </p>
