--- a/cv.html
+++ b/cv.html
@@ -35,7 +35,7 @@
             <b>Konstandinos Kotsiopoulos</b>
         </p>
         <p>
-            <a href="home.html" style="font-size: 120%; color:plum;">Home</a>
+            <a href="index.html" style="font-size: 120%; color:plum;">Home</a>
             <a href="research.html" style="font-size: 120%; color: plum;">Research</a>
             <a href="cv.html" style="font-size: 135%; color: darkorange;">CV</a>
         </p>
