--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <b>Konstandinos Kotsiopoulos</b>
         </p>
         <p>
-            <a href="home.html" style="font-size: 135%; color:darkorange;">Home</a>
+            <a href="index.html" style="font-size: 135%; color:darkorange;">Home</a>
             <a href="research.html" style="font-size: 120%; color: plum;">Research</a>
             <a href="cv.html" style="font-size: 120%; color: plum;">CV</a>
         </p>
