--- a/research.html
+++ b/research.html
@@ -62,7 +62,7 @@
 
     <h3>Published/Accepted Papers</h3>
     <ol>
-        <li style="text-align:justify;"> <a href="https://link.springer.com/content/pdf/10.1007/s10994-022-06213-9.pdf" target="_blank" rel="noopener">[pdf_file]</a> A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan, <em><span class="fontstyle0"> "Wasserstein-based fairness interpretability framework for machine learning models", </span></em> Machine Learning (2022), doi:10.1007/s10994-022-06213-9</li>
+        <li style="text-align:justify;"> <a href="https://link.springer.com/content/pdf/10.1007/s10994-022-06213-9.pdf" target="_blank" rel="noopener">[pdf_file]</a> A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan, <em><span class="fontstyle0"> "Wasserstein-based fairness interpretability framework for machine learning models", </span></em> Machine Learning (2022), DOI:10.1007/s10994-022-06213-9</li>
     </ol>
 </body>
 </html>
