--- a/cv.html
+++ b/cv.html
@@ -112,7 +112,7 @@
     <hr>
 
     <h3>Technical Proficiencies</h3>
-    <p style="text-align:justify;">C, C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</p>
+    <p style="text-align:justify;">C/C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</p>
 
     <hr>
 
