--- a/cv.html
+++ b/cv.html
@@ -52,7 +52,8 @@
 
     <h3>Work/Research experience</h3>
     <ul>
-        <li style="text-align:justify;">Lead Research Scientist, Discover Financial Services, October 2021 - Present</li>
+        <li style="text-align:justify;">Principal Research Scientist, Discover Financial Services, October 2022 - Present</li>
+        <li style="text-align:justify;">Lead Research Scientist, Discover Financial Services, October 2021 - October 2022</li>
         <li style="text-align:justify;">Senior Modeler, Discover Financial Services, March 2021 - October 2021</li>
         <li style="text-align:justify;">Modeler, Discover Financial Services, Aug 2019 - March 2021</li>
         <li style="text-align:justify;">Associate Modeler, Discover Financial Services, Nov 2018 - Aug 2019</li>
