--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 
         </p>
     </div>
-    <h3>About me</h3>
+    <h3 style="text-align:center;">About me</h3>
     <p style="text-align:justify;">Graduated with a <em>Ph.D. in Mathematics</em> from the University of Massachusetts Amherst. My primary advisor was Professor Richard S. Ellis and my research with him focused on the asymptotic behavior of stochastic dynamical systems and properties of their invariant measures. Furthermore, I've collaborated with Professors Erin Conlon, my co-advisor, and Alexey Miroshnikov on establishing asymptotic properties of Bayesian statistical methods for data science. My thesis can be found on Scholarworks@UMass Amherst <a href="https://scholarworks.umass.edu/dissertations_2/1316/" target="_blank">here</a>.</p>
     <p style="text-align:justify;">Currently, I'm a <em>Principal Research Scientist</em> at <strong>Discover Financial Services</strong>. My work there focuses on problems related to Machine Learning interpretability.</p>
     
     <hr>
 
-    <h3>Contact</h3>
+    <h3 style="text-align:center;">Contact</h3>
     <ul>
-         <li style="text-align:left;"> <b>Email</b>: kkotsiop AT gmail(dot)com</li>
-         <li style="text-align:left;"> <b>LinkedIn</b>: https://www.linkedin.com/in/konstandinos-kotsiopoulos-76742373</li>
+         <li style="text-align:center;"> <b>Email</b>: kkotsiop AT gmail(dot)com</li>
+         <li style="text-align:center;"> <b>LinkedIn</b>: https://www.linkedin.com/in/konstandinos-kotsiopoulos-76742373</li>
     </ul>
 </body>
 </html>
