--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </style>
 </head>
 <body>
+    ul {display: table; margin: 0 auto; text-align: left;}
     <div class="headpic">
         <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder"/>
         <p style="font-size: 150%;">
