--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             border-color: Black;
             border-style: solid;
         }
+        ul {display: table; margin: 0 auto; text-align: left;}
     </style>
 </head>
 <body>
@@ -45,8 +46,8 @@
 
     <h3 style="text-align:center;">Contact</h3>
     <ul>
-         <li style="text-align:center;"> <b>Email</b>: kkotsiop AT gmail(dot)com</li>
-         <li style="text-align:center;"> <b>LinkedIn</b>: https://www.linkedin.com/in/konstandinos-kotsiopoulos-76742373</li>
+         <li> <b>Email</b>: kkotsiop AT gmail(dot)com</li>
+         <li> <b>LinkedIn</b>: https://www.linkedin.com/in/konstandinos-kotsiopoulos-76742373</li>
     </ul>
 </body>
 </html>
