adjusted research page

--- a/research.html
+++ b/research.html
@@ -26,6 +26,7 @@
             font-size: 135%;
             text-decoration: underline;
         }
+        ul {display: table; margin: 0 auto; text-align: left;}
     </style>
 </head>
 <body>
@@ -40,18 +41,18 @@
             <a href="cv.html" style="font-size: 120%; color: plum;">CV</a>
         </p>
     </div>
-    <h3>Research Interests</h3>
+    <h3 style="text-align:center;">Research Interests</h3>
     <ul>
-        <li style="text-align:justify;">Probability theory: limit theorems for Markov chains, large deviation theory, stochastic
-    processes and stochastic ODEs</li>
-        <li style="text-align:justify;">Dynamical systems and ergodic theory</li>
-        <li style="text-align:justify;">Statistics with applications to data science</li>
-        <li style="text-align:justify;">Machine Learning interpretability</li>
+        <li>Probability theory: <em>limit theorems for Markov chains, large deviation theory, stochastic
+    processes and stochastic ODEs</em></li>
+        <li>Dynamical systems and ergodic theory</li>
+        <li>Statistics with applications to data science</li>
+        <li>Machine Learning interpretability</li>
     </ul>
 
     <hr>
 
-    <h3>Preprints</h3>
+    <h3 style="text-align:center;">Preprints</h3>
     <ol>
         <li style="text-align:justify;"> <a href="https://arxiv.org/abs/2111.11259" target="_blank" rel="noopener">[pdf_file]</a> A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan, <em><span class="fontstyle0"> "Model-agnostic bias mitigation methods with regressor distribution control for Wasserstein-based fairness metrics", </span></em> arXiv:2111.11259 (2021).</li>
         <li style="text-align:justify;"> <a href="https://arxiv.org/abs/2102.10878" target="_blank" rel="noopener">[pdf_file]</a> A. Miroshnikov, K. Kotsiopoulos, and A. Ravi Kannan, <em><span class="fontstyle0"> "Mutual information-based group explainers with coalition structure for machine learning model explanations", </span></em> arXiv:2102.10878 (2021).</li>
@@ -60,7 +61,7 @@
 
     <hr>
 
-    <h3>Published/Accepted Papers</h3>
+    <h3 style="text-align:center;">Published/Accepted Papers</h3>
     <ol>
         <li style="text-align:justify;"> <a href="https://link.springer.com/content/pdf/10.1007/s10994-022-06213-9.pdf" target="_blank" rel="noopener">[pdf_file]</a> A. Miroshnikov, K. Kotsiopoulos, R. Franks and A. Ravi Kannan, <em><span class="fontstyle0"> "Wasserstein-based fairness interpretability framework for machine learning models", </span></em> Machine Learning (2022), doi:10.1007/s10994-022-06213-9</li>
     </ol>
