--- a/cv.html
+++ b/cv.html
@@ -26,6 +26,7 @@
             font-size: 135%;
             text-decoration: underline;
         }
+        ul {display: table; margin: 0 auto; text-align: left;}
     </style>
 </head>
 <body>
@@ -40,12 +41,12 @@
             <a href="cv.html" style="font-size: 135%; color: darkorange;">CV</a>
         </p>
     </div>
-    <h3>Education</h3>
+    <h3 style="text-align:center;">Education</h3>
     <ul>
-        <li style="text-align:justify;">Ph.D. in Mathematics, University of Massachusetts Amherst, 2013 - 2018</li>
-        <li style="text-align:justify;">M.Sc. in Mathematics, University of Massachusetts Amherst, 2013 - 2015</li>
-        <li style="text-align:justify;">Non-degree graduate studies at the University of Crete, Greece, 2012 - 2013</li>
-        <li style="text-align:justify;">B.Sc. in Mathematics, University of Crete, Greece, 2008 - 2012</li>
+        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst, 2013 - 2018</li>
+        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst, 2013 - 2015</li>
+        <li><em>Non-degree graduate studies at the University of Crete</em>, Greece, 2012 - 2013</li>
+        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece, 2008 - 2012</li>
     </ul>
 
     <hr>
