--- a/cv.html
+++ b/cv.html
@@ -27,6 +27,10 @@
             text-decoration: underline;
         }
         ul {display: table; margin: 0 auto; text-align: left;}
+        .tab {
+            display: inline-block;
+            margin-left: 40px;
+        }
     </style>
 </head>
 <body>
@@ -43,9 +47,9 @@
     </div>
     <h3 style="text-align:center;">Education</h3>
     <ul>
-        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst, 2013 - 2018</li>
+        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst,<span class="tab"></span> 2013 - 2018</li>
         <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst, 2013 - 2015</li>
-        <li><em>Non-degree graduate studies at the University of Crete</em>, Greece, 2012 - 2013</li>
+        <li><em>Non-degree graduate studies</em> at the University of Crete, Greece, 2012 - 2013</li>
         <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece, 2008 - 2012</li>
     </ul>
 
