--- a/cv.html
+++ b/cv.html
@@ -27,9 +27,17 @@
             text-decoration: underline;
         }
         ul {display: table; margin: 0 auto; text-align: left;}
-        .tab {
+        .tab40 {
             display: inline-block;
             margin-left: 40px;
+        }
+        .tab44 {
+            display: inline-block;
+            margin-left: 44px;
+        }
+        .tab48 {
+            display: inline-block;
+            margin-left: 48px;
         }
     </style>
 </head>
@@ -47,10 +55,10 @@
     </div>
     <h3 style="text-align:center;">Education</h3>
     <ul>
-        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst,<span class="tab"></span> 2013 - 2018</li>
-        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst,<span class="tab"></span> 2013 - 2015</li>
-        <li><em>Non-degree graduate studies</em>, University of Crete, Greece,<span class="tab"></span> 2012 - 2013</li>
-        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece,<span class="tab"></span> 2008 - 2012</li>
+        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span class="tab40"></span> 2013 - 2018</li>
+        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="tab40"></span> 2013 - 2015</li>
+        <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="tab44"></span> 2012 - 2013</li>
+        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span class="tab48"></span> 2008 - 2012</li>
     </ul>
 
     <hr>
