--- a/cv.html
+++ b/cv.html
@@ -27,7 +27,7 @@
             text-decoration: underline;
         }
         ul {display: table; margin: 0 auto; text-align: left;}
-        .tab40 {
+        /* .tab40 {
             display: inline-block;
             margin-left: 40px;
         }
@@ -38,7 +38,7 @@
         .tab48 {
             display: inline-block;
             margin-left: 88px;
-        }
+        } */
     </style>
 </head>
 <body>
@@ -56,9 +56,9 @@
     <h3 style="text-align:center;">Education</h3>
     <ul>
         <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst &emsp; 2013 - 2018</li>
-        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span class="tab40"></span> 2013 - 2015</li>
-        <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span class="tab44"></span> 2012 - 2013</li>
-        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece <span class="tab48"></span> 2008 - 2012</li>
+        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst &emsp; 2013 - 2015</li>
+        <li><em>Non-degree graduate studies</em>, University of Crete, Greece &emsp; &emsp; 2012 - 2013</li>
+        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece &emsp; &emsp; &emsp; 2008 - 2012</li>
     </ul>
 
     <hr>
