--- a/cv.html
+++ b/cv.html
@@ -55,10 +55,10 @@
     </div>
     <h3 style="text-align:center;">Education</h3>
     <ul>
-        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst &emsp;                   2013 - 2018</li>
+        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst &emsp; 2013 - 2018</li>
         <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst &emsp; 2013 - 2015</li>
-        <li><em>Non-degree graduate studies</em>, University of Crete, Greece &emsp; &emsp; 2012 - 2013</li>
-        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece &emsp; &emsp; &emsp; 2008 - 2012</li>
+        <li><em>Non-degree graduate studies</em>, University of Crete, Greece &emsp; &ensp; 2012 - 2013</li>
+        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece &emsp; &emsp; &emsp; &emsp; 2008 - 2012</li>
     </ul>
 
     <hr>
