--- a/cv.html
+++ b/cv.html
@@ -57,8 +57,8 @@
     <ul>
         <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst &emsp; 2013 - 2018</li>
         <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst &emsp; 2013 - 2015</li>
-        <li><em>Non-degree graduate studies</em>, University of Crete, Greece &emsp; &ensp; &nbsp; 2012 - 2013</li>
-        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece &emsp; &emsp; &emsp; &emsp; &nbsp; 2008 - 2012</li>
+        <li><em>Non-degree graduate studies</em>, University of Crete, Greece &emsp; &nbsp; &nbsp; 2012 - 2013</li>
+        <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece &emsp; &emsp; &emsp; &emsp; 2008 - 2012</li>
     </ul>
 
     <hr>
