--- a/cv.html
+++ b/cv.html
@@ -27,18 +27,6 @@
             text-decoration: underline;
         }
         ul {display: table; margin: 0 auto; text-align: left;}
-        /* .tab40 {
-            display: inline-block;
-            margin-left: 40px;
-        }
-        .tab44 {
-            display: inline-block;
-            margin-left: 56px;
-        }
-        .tab48 {
-            display: inline-block;
-            margin-left: 88px;
-        } */
     </style>
 </head>
 <body>
@@ -55,9 +43,9 @@
     </div>
     <h3 style="text-align:center;">Education</h3>
     <ul>
-        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span style="margin-left:0.8em"></span> 2013 - 2018</li>
-        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst &emsp; 2013 - 2015</li>
-        <li><em>Non-degree graduate studies</em>, University of Crete, Greece &emsp; &nbsp; &nbsp; 2012 - 2013</li>
+        <li><em>Ph.D. in Mathematics</em>, University of Massachusetts Amherst <span style="margin-left:1em"></span> 2013 - 2018</li>
+        <li><em>M.Sc. in Mathematics</em>, University of Massachusetts Amherst <span style="margin-left:1em"></span> 2013 - 2015</li>
+        <li><em>Non-degree graduate studies</em>, University of Crete, Greece <span style="margin-left:1.5em"></span> 2012 - 2013</li>
         <li><em>B.Sc. in Mathematics</em>, University of Crete, Greece &emsp; &emsp; &emsp; &ensp; &nbsp; &thinsp; 2008 - 2012</li>
     </ul>
 
