--- a/cv.html
+++ b/cv.html
@@ -51,15 +51,15 @@
 
     <hr>
 
-    <h3>Work/Research experience</h3>
+    <h3 style="text-align:center;">Work/Research experience</h3>
     <ul>
-        <li style="text-align:justify;">Principal Research Scientist, Discover Financial Services, October 2022 - Present</li>
-        <li style="text-align:justify;">Lead Research Scientist, Discover Financial Services, October 2021 - October 2022</li>
-        <li style="text-align:justify;">Senior Modeler, Discover Financial Services, March 2021 - October 2021</li>
-        <li style="text-align:justify;">Modeler, Discover Financial Services, Aug 2019 - March 2021</li>
-        <li style="text-align:justify;">Associate Modeler, Discover Financial Services, Nov 2018 - Aug 2019</li>
-        <li style="text-align:justify;">Research Assistant, University of Massachusetts Amherst, Summer 2016</li>
-        <li style="text-align:justify;">Student Intern, Foundation for Research and Technology – Institute of Applied and Computational Mathematics (FORTH - IACM), Summer 2012</li>
+        <li>Principal Research Scientist, Discover Financial Services <span style="margin-left:1em"></span> Oct 2022 - Present</li>
+        <li>Lead Research Scientist, Discover Financial Services <span style="margin-left:1em"></span> Oct 2021 - Oct 2022</li>
+        <li>Senior Modeler, Discover Financial Services <span style="margin-left:1em"></span> Mar 2021 - Oct 2021</li>
+        <li>Modeler, Discover Financial Services <span style="margin-left:1em"></span> Aug 2019 - Mar 2021</li>
+        <li>Associate Modeler, Discover Financial Services <span style="margin-left:1em"></span> Nov 2018 - Aug 2019</li>
+        <li>Research Assistant, University of Massachusetts Amherst <span style="margin-left:1em"></span> Summer 2016</li>
+        <li>Student Intern, Foundation for Research and Technology – Institute of Applied and Computational Mathematics (FORTH - IACM) <span style="margin-left:1em"></span> Summer 2012</li>
     </ul>
 
     <hr>
