--- a/cv.html
+++ b/cv.html
@@ -53,13 +53,13 @@
 
     <h3 style="text-align:center;">Work/Research experience</h3>
     <ul>
-        <li>Principal Research Scientist, Discover Financial Services <span style="margin-left:1em"></span> Oct 2022 - Present</li>
-        <li>Lead Research Scientist, Discover Financial Services <span style="margin-left:1em"></span> Oct 2021 - Oct 2022</li>
-        <li>Senior Modeler, Discover Financial Services <span style="margin-left:1em"></span> Mar 2021 - Oct 2021</li>
-        <li>Modeler, Discover Financial Services <span style="margin-left:1em"></span> Aug 2019 - Mar 2021</li>
-        <li>Associate Modeler, Discover Financial Services <span style="margin-left:1em"></span> Nov 2018 - Aug 2019</li>
-        <li>Research Assistant, University of Massachusetts Amherst <span style="margin-left:1em"></span> Summer 2016</li>
-        <li>Student Intern, Foundation for Research and Technology – Institute of Applied and Computational Mathematics (FORTH - IACM) <span style="margin-left:1em"></span> Summer 2012</li>
+        <li><em>Principal Research Scientist</em>, Discover Financial Services <span style="margin-left:1em"></span> Oct 2022 - Present</li>
+        <li><em>Lead Research Scientist</em>, Discover Financial Services <span style="margin-left:1em"></span> Oct 2021 - Oct 2022</li>
+        <li><em>Senior Modeler</em>, Discover Financial Services <span style="margin-left:1em"></span> Mar 2021 - Oct 2021</li>
+        <li><em>Modeler</em>, Discover Financial Services <span style="margin-left:1em"></span> Aug 2019 - Mar 2021</li>
+        <li><em>Associate Modeler</em>, Discover Financial Services <span style="margin-left:1em"></span> Nov 2018 - Aug 2019</li>
+        <li><em>Research Assistant</em>, University of Massachusetts Amherst <span style="margin-left:1em"></span> Summer 2016</li>
+        <li><em>Student Intern</em> at FORTH - IACM, Crete, Greece <span style="margin-left:1em"></span> Summer 2012</li>
     </ul>
 
     <hr>
