--- a/cv.html
+++ b/cv.html
@@ -53,6 +53,7 @@
 
     <h3 style="text-align:center;">Work/Research experience</h3>
     <ul>
+        Company
         <li><em>Principal Research Scientist</em>, Discover Financial Services <span style="margin-left:1em"></span> Oct 2022 - Present</li>
         <li><em>Lead Research Scientist</em>, Discover Financial Services <span style="margin-left:1em"></span> Oct 2021 - Oct 2022</li>
         <li><em>Senior Modeler</em>, Discover Financial Services <span style="margin-left:1em"></span> Mar 2021 - Oct 2021</li>
