--- a/cv.html
+++ b/cv.html
@@ -54,7 +54,7 @@
     <h3 style="text-align:center;">Work/Research experience</h3>
 
     <ul>
-        <p style="display: table;margin: 0 auto;text-align: left;"><b>Discover Financial Services</b>, Riverwoods, IL</p>
+        <p style="text-align: left;"><b>Discover Financial Services</b>, Riverwoods, IL</p>
         <li><em>Principal Research Scientist</em> <span style="margin-left:1em"></span> Oct 2022 - Present</li>
         <li><em>Lead Research Scientist</em> <span style="margin-left:1em"></span> Oct 2021 - Oct 2022</li>
         <li><em>Senior Modeler</em> <span style="margin-left:1em"></span> Mar 2021 - Oct 2021</li>
