--- a/cv.html
+++ b/cv.html
@@ -68,64 +68,64 @@
 
     <hr>
 
-    <h3>Teaching Experience</h3>
-    <strong style="text-align:justify;">Department of Mathematics and Statistics, Mount Holyoke College, 2017</strong>
-    <p style="padding-left:30px;text-align:justify;">−MATH 102: Calculus II</p>
-    <strong style="text-align:justify;">Department of Mathematics and Statistics, University of Massachusetts Amherst, 2013 - Present</strong>
-    <p style="padding-left:30px;text-align:justify;">−MATH 131: Calculus I</p>
-    <p style="padding-left:30px;text-align:justify;">−MATH 132: Calculus II (discussion leader)</p>
-    <p style="padding-left:30px;text-align:justify;">−MATH 132H: Honors Calculus II (discussion leader)</p>
-    <p style="padding-left:30px;text-align:justify;">−MATH 233: Multivariate Calculus</p>
-    <p style="padding-left:30px;text-align:justify;">−MATH 331: Ordinary Differential Equations for Scientists and Engineers</p>
-    <p style="padding-left:30px;text-align:justify;">−MATH 456: Mathematical Modeling (discussion leader)</p>
-    <p style="padding-left:30px;text-align:justify;">−STAT 240: Intro to Statistics (discussion leader &amp; online TA)</p>
-    <p style="padding-left:30px;text-align:justify;">−STAT 501: Methods of Applied Statistics (TA)</p>
-    <strong style="text-align:justify;">Department of Mathematics, University of Crete, Greece, 2011 - 2012</strong>
-    <p style="padding-left:30px;text-align:justify;">−MEM-262: Parametric Statistics (discussion leader)</p>
+    <h3 style="text-align:center;">Teaching Experience</h3>
+    <strong style="text-align:center;">Department of Mathematics and Statistics, Mount Holyoke College, 2017</strong>
+    <p style="padding-left:30px;text-align:center;">−MATH 102: Calculus II</p>
+    <strong style="text-align:center;">Department of Mathematics and Statistics, University of Massachusetts Amherst, 2013 - Present</strong>
+    <p style="padding-left:30px;text-align:center;">−MATH 131: Calculus I</p>
+    <p style="padding-left:30px;text-align:center;">−MATH 132: Calculus II (discussion leader)</p>
+    <p style="padding-left:30px;text-align:center;">−MATH 132H: Honors Calculus II (discussion leader)</p>
+    <p style="padding-left:30px;text-align:center;">−MATH 233: Multivariate Calculus</p>
+    <p style="padding-left:30px;text-align:center;">−MATH 331: Ordinary Differential Equations for Scientists and Engineers</p>
+    <p style="padding-left:30px;text-align:center;">−MATH 456: Mathematical Modeling (discussion leader)</p>
+    <p style="padding-left:30px;text-align:center;">−STAT 240: Intro to Statistics (discussion leader &amp; online TA)</p>
+    <p style="padding-left:30px;text-align:center;">−STAT 501: Methods of Applied Statistics (TA)</p>
+    <strong style="text-align:center;">Department of Mathematics, University of Crete, Greece, 2011 - 2012</strong>
+    <p style="padding-left:30px;text-align:center;">−MEM-262: Parametric Statistics (discussion leader)</p>
 
     <hr>
 
-    <h3>Contributed Talks</h3>
+    <h3 style="text-align:center;">Contributed Talks</h3>
     <ul>
-        <li style="text-align:justify;">WINRS: A Meeting of Mathematical Minds, Brown University, “<em>Asymptotic behavior of the random logistic model</em>”, March 2017</li>
-        <li style="text-align:justify;">Applied Analysis and Computation Seminar, University of Massachusetts Amherst, “<em>Asymptotic behavior of the random logistic model</em>”, November 2016</li>
-        <li style="text-align:justify;">Applied Math Days, Rensselaer Polytechnic Institute, “<em>Asymptotic behavior of the invariant density of the random logistic model</em>”, April 2016</li>
+        <li>WINRS: A Meeting of Mathematical Minds, Brown University, “<em>Asymptotic behavior of the random logistic model</em>”, March 2017</li>
+        <li>Applied Analysis and Computation Seminar, University of Massachusetts Amherst, “<em>Asymptotic behavior of the random logistic model</em>”, November 2016</li>
+        <li>Applied Math Days, Rensselaer Polytechnic Institute, “<em>Asymptotic behavior of the invariant density of the random logistic model</em>”, April 2016</li>
     </ul>
 
     <hr>
 
-    <h3>Additional conferences attended</h3>
+    <h3 style="text-align:center;">Additional conferences attended</h3>
     <ul>
-        <li style="text-align:justify;">H2O World New York, October 2019</li>
-        <li style="text-align:justify;">Biostatistics in Practice: Data Sciences for the Life Sciences in a High Performance Computing Environment, one-day workshop at MGHPCC, February 2014</li>
+        <li>H2O World New York, October 2019</li>
+        <li>Biostatistics in Practice: Data Sciences for the Life Sciences in a High Performance Computing Environment, one-day workshop at MGHPCC, February 2014</li>
     </ul>
 
     <hr>
 
-    <h3>Awards and Honors</h3>
+    <h3 style="text-align:center;">Awards and Honors</h3>
     <ul>
-        <li style="text-align:justify;">President's award, Discover Financial Services, March 2022</li>
-        <li style="text-align:justify;">Excellence award, Discover Financial Services, November 2020</li>
-        <li style="text-align:justify;">"STYLIANOS K. PICHORIDES" award, University of Crete, Greece, June 2012</li>
-        <li style="text-align:justify;">Scholarship awarded from the State Scholarship Foundation (IKY), 2009 - 2010</li>
+        <li>President's award, Discover Financial Services, March 2022</li>
+        <li>Excellence award, Discover Financial Services, November 2020</li>
+        <li>"STYLIANOS K. PICHORIDES" award, University of Crete, Greece, June 2012</li>
+        <li>Scholarship awarded from the State Scholarship Foundation (IKY), 2009 - 2010</li>
     </ul>
 
     <hr>
 
-    <h3>Affiliations</h3>
-    <p style="text-align:justify;">American Mathematical Society (AMS)</p>
+    <h3 style="text-align:center;">Affiliations</h3>
+    <p style="text-align:center;">American Mathematical Society (AMS)</p>
 
     <hr>
 
-    <h3>Technical Proficiencies</h3>
-    <p style="text-align:justify;">C/C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</p>
+    <h3 style="text-align:center;">Technical Proficiencies</h3>
+    <p style="text-align:center;">C/C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</p>
 
     <hr>
 
-    <h3>Other Information</h3>
+    <h3 style="text-align:center;">Other Information</h3>
     <ul>
-        <li style="text-align:justify;">Dual citizenship (U.S. and Greek)</li>
-        <li style="text-align:justify;">Fluent in English and Greek</li>
+        <li>Dual citizenship (U.S. and Greek)</li>
+        <li>Fluent in English and Greek</li>
     </ul>
 </body>
 </html>
