--- a/cv.html
+++ b/cv.html
@@ -69,9 +69,9 @@
     <hr>
 
     <h3 style="text-align:center;">Teaching Experience</h3>
-    <strong style="text-align:center;">Department of Mathematics and Statistics, Mount Holyoke College, 2017</strong>
+    <p style="text-align:center;"><strong>Department of Mathematics and Statistics, Mount Holyoke College, 2017</strong></p>
     <p style="padding-left:30px;text-align:center;">−MATH 102: Calculus II</p>
-    <strong style="text-align:center;">Department of Mathematics and Statistics, University of Massachusetts Amherst, 2013 - Present</strong>
+    <p style="text-align:center;"><strong>Department of Mathematics and Statistics, University of Massachusetts Amherst, 2013 - Present</strong></p>
     <p style="padding-left:30px;text-align:center;">−MATH 131: Calculus I</p>
     <p style="padding-left:30px;text-align:center;">−MATH 132: Calculus II (discussion leader)</p>
     <p style="padding-left:30px;text-align:center;">−MATH 132H: Honors Calculus II (discussion leader)</p>
@@ -80,7 +80,7 @@
     <p style="padding-left:30px;text-align:center;">−MATH 456: Mathematical Modeling (discussion leader)</p>
     <p style="padding-left:30px;text-align:center;">−STAT 240: Intro to Statistics (discussion leader &amp; online TA)</p>
     <p style="padding-left:30px;text-align:center;">−STAT 501: Methods of Applied Statistics (TA)</p>
-    <strong style="text-align:center;">Department of Mathematics, University of Crete, Greece, 2011 - 2012</strong>
+    <p style="text-align:center;"><strong>Department of Mathematics, University of Crete, Greece, 2011 - 2012</strong></p>
     <p style="padding-left:30px;text-align:center;">−MEM-262: Parametric Statistics (discussion leader)</p>
 
     <hr>
