--- a/cv.html
+++ b/cv.html
@@ -52,7 +52,7 @@
     <hr>
 
     <h3 style="text-align:center;">Technical Proficiencies</h3>
-    <p style="text-align:center;">C/C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages</p>
+    <p style="text-align:center;">C/C++, Java, FORTRAN, MATLAB, Mathematica, Python and R programming languages. LaTeX and HTML scripting tools</p>
 
     <hr>
 
@@ -66,9 +66,9 @@
         <li><em>Modeler</em> <span style="margin-left:8.95em"></span> Aug 2019 - Mar 2021</li>
         <li><em>Associate Modeler</em> <span style="margin-left:4.9em"></span> Nov 2018 - Aug 2019</li>
     <p style="text-align: left;"><b>University of Massachusetts Amherst</b>, MA</p>
-        <li><em>Research Assistant</em> <span style="margin-left:5em"></span> Summer 2016</li>
+        <li><em>Research Assistant</em> <span style="margin-left:4.95em"></span> Summer 2016</li>
     <p style="text-align: left;"><b>FORTH - IACM</b>, Crete, Greece</p>
-        <li><em>Student Intern</em> <span style="margin-left:5em"></span> Summer 2012</li>
+        <li><em>Student Intern</em> <span style="margin-left:6.8em"></span> Summer 2012</li>
     </ul>
 
     <hr>
@@ -109,10 +109,10 @@
 
     <h3 style="text-align:center;">Awards and Honors</h3>
     <ul>
-        <li><em>President's award</em>, Discover Financial Services <span style="margin-left:9.8em"></span> March 2022</li>
-        <li><em>Excellence award</em>, Discover Financial Services <span style="margin-left:9.9em"></span> November 2020</li>
+        <li><em>President's award</em>, Discover Financial Services <span style="margin-left:9.7em"></span> March 2022</li>
+        <li><em>Excellence award</em>, Discover Financial Services <span style="margin-left:9.7em"></span> November 2020</li>
         <li><em>"STYLIANOS K. PICHORIDES" award</em>, University of Crete, Greece <span style="margin-left:1em"></span> June 2012</li>
-        <li><em>Scholarship award</em>, State Scholarships Foundation (IKY) <span style="margin-left:5.9em"></span> 2009 - 2010</li>
+        <li><em>Scholarship award</em>, State Scholarships Foundation (IKY) <span style="margin-left:5.9=7em"></span> 2009 - 2010</li>
     </ul>
 
     <hr>
