--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div class="headpic">
-        <img src="mypic.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder"/>
+        <img src="my_photo.jpg" alt="My_Picture.com" width="124" height="162" class="ImageBorder"/>
         <p style="font-size: 150%;">
             <b>Konstandinos Kotsiopoulos</b>
         </p>
