minor changes to text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <style>
         div {
             text-align: center;
+            margin-right: 80px;
+            margin-left: 80px;
         }
         .headpic {
           background-color: rgb(28, 110, 135);
