minor changes to text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <div class="headpic">
         <img src="my_photo.jpg" alt="My_Picture.com" width="149" height="162" class="ImageBorder"/>
-        <p style="font-size: 150%;">
+        <p style="font-size: 150%;font-family: Verdana;">
             <b>Konstandinos Kotsiopoulos</b>
         </p>
         <p>
