minor changes to text

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 <body>
     <div class="headpic">
         <img src="my_photo.jpg" alt="My_Picture.com" width="149" height="162" class="ImageBorder"/>
-        <p style="font-size: 150%;font-family: Verdana;">
-            <b>Konstandinos Kotsiopoulos</b>
-        </p>
+        <p style="font-size: 150%;font-family: Verdana;">Konstandinos Kotsiopoulos</p>
         <p>
             <a href="index.html" style="font-size: 135%; color:darkorange;">Home</a>
             <a href="research.html" style="font-size: 120%; color: plum;">Research</a>
